Add explain report flow
